# relay

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  ANDROID_INTERNET_DEBUG.md  ANDROID_RELEASE_COMPLETE.md  ANDROID_SIGNING_SETUP.md  CLEANUP_SUMMARY.md  COMPLETE_SUMMARY.md  CROSS_PLATFORM_STYLING_GUIDE.md  Cargo.toml  DEBUGGING_STATUS.md  DELIVERABLES.md  DEPLOYMENT_INSTRUCTIONS.md  DEV_SERVER_README.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.runtime  E2E_DOCUMENTATION_INDEX.md  E2E_TESTS_QUICK_REFERENCE.md  E2E_TEST_SUITE_README.md  GIT_FILE_SERVING_FIX.md  GIT_FILE_SERVING_RESOLVED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MONOREPO_SPLIT_PLAN.md  MONOREPO_SPLIT_QUICK_REF.md  PORT_MAPPINGS.md  PROJECT_COMPLETION_REPORT.md  REACT_NATIVE_VIDEO_IMPLEMENTATION.md  README.md  README_REFACTORING.md  SESSION_COMPLETION_REPORT.md  VERIFICATION_CHECKLIST.md  WEB_CLIENT_SUMMARY.md  deploy-to-rackspace.ps1  deploy-to-rackspace.sh  (+13 more)
.githooks/: pre-commit
.github/: RACKSPACE_STALE_DEPLOYMENT_ANALYSIS.md  RACKSPACE_V0.2.0_DEPLOYMENT_SUCCESS.md
.github/workflows/: android-build.yml  build-arch.yml  build-next-export.yml  ci.yml  docker-publish.yml  publish-ghcr.yml  publish-runtime.yml  release.yml
.storybook/: main.js  preview.js
apps/client/: Cargo.toml  README.md  index.html  package.json  tailwind.config.js  tsconfig.json
apps/client-flutter/: PLAN.md
apps/client-react-native/: .gitignore  INTEGRATION_EXAMPLES.tsx  NATIVE_MODULES.md  README.md  TURBOMODULE_ISSUE.md  UPDATE_FEATURE.md  app.json  babel.config.js  index.js  jest.setup.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/client-react-native/rust/: Cargo.toml  cbindgen.toml
apps/client-react-native/rust/jni/: mod.rs
apps/client-react-native/rust/src/: lib.rs
apps/client-valdi/: Cargo.toml  PLAN.md
apps/client-valdi/src/: main.rs
apps/client-web-backup-2025-12-03/: .env.example  README.md  index.html  package.json  tailwind.config.js  (+1 more)
apps/client-web/wasm-transpiler/: Cargo.toml
apps/client-web/wasm-transpiler/patches/serde/: .cargo-checksum.json  .cargo_vcs_info.json
apps/client-web/wasm-transpiler/src/: lib.rs
apps/client/src/: App.tsx  index.css  main.rs  main.tsx  streaming.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: main.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: main.rs
cert/: server.crt  server.key
crates/hook-transpiler/: Cargo.toml  README.md
crates/hook-transpiler-cli/: Cargo.toml
crates/hook-transpiler-cli/src/: main.rs
crates/hook-transpiler/src/: android_jni.rs  ios_ffi.rs  lib.rs
crates/hooks/: Cargo.toml  README.md
crates/hooks/src/: main.rs
crates/relay-cli/: Cargo.toml  Dockerfile  Dockerfile.podman
crates/relay-cli/src/: log.rs  main.rs  main_old.rs
crates/relay-cli/tests/: hooks_integration.rs
crates/relay-client-core/: Cargo.toml
crates/relay-client-core/src/: config.rs  lib.rs  md.rs  peers.rs  plugins.rs  remotes.rs  scripts.rs
crates/relay-core/: Cargo.toml
crates/relay-core/src/: config.rs  git.rs  git_client.rs  lib.rs  schema.rs
crates/relay-lib/: Cargo.toml  README.md
crates/relay-lib/assets/: 404.md  openapi.yaml  relay.schema.yaml  rules.schema.yaml  template.html
crates/relay-lib/src/: assets.rs  db.rs  lib.rs
crates/relay-repo/: Cargo.toml
crates/relay-repo/src/: lib.rs
crates/relay-repo/tests/: movies_e2e.rs
crates/relay-wasm/: Cargo.toml
crates/relay-wasm/src/: lib.rs
crates/streaming-files/: Cargo.toml  README.md
crates/streaming-files/src/: config.rs  env.rs  errors.rs  lib.rs  model.rs  playback.rs  rpc.rs  service.rs  ui.rs
crates/streaming-files/src/rpc/: qbit.rs  transmission.rs
crates/streaming-files/tests/: config_patch_tests.rs  env_tests.rs  playback_tests.rs  qbit_tests.rs  service_refresh_tests.rs  transmission_tests.rs
crates/themed-styler/: Cargo.toml  README.md  theme.yaml
crates/themed-styler/assets/: tailwind-colors.html
crates/themed-styler/src/: android_jni.rs  default_state.rs  ios_ffi.rs  lib.rs
docker/: README.md  entrypoint.sh  nginx-relay-locations.conf  nginx-relay.conf  nginx-ssl.conf.template
docs/: CROSS_PLATFORM_VIDEO_IMPLEMENTATION.md  DEPLOYMENT.md  DEV_SERVER_README.md  DISTRIBUTED_FILE_LOADER.md  FINAL_SESSION_REPORT.md  GHCR_PUBLISH.md  INVESTIGATION_OPTIONS_ENDPOINT.md  PLAN.md  README.md  RELEASE_VALIDATION.md  REPO_INIT.md  SWC_CONSOLE_PROBE_GUIDE.md  SWC_DEBUGGING_INDEX.md  SWC_DEBUGGING_REPORT.md  SWC_DEBUGGING_SESSION_SUMMARY.md  TEMPLATE_REFACTORING_COMPLETE.md  THEMING_ARCHITECTURE.md  UPDATE-RELAY-TEMPLATE.md  WINDOWS_SETUP.md  android-signing-key-management.md  git-branch-rules.md  hook-transpiler-plan.md  ipfs-plan.md  plan_status.md  plugin-interface.md  pre-commit.md  relay-yaml-configuration.md  relay_cross_platform_updated.md  relay_project_vision.md  repo-script-system.md  roadmap.md  web-client-architecture.md
postman/: Relay.http  Relay.postman_collection.json  http-client.env.json
schema/: relay.schema.yaml
scripts/: README-a11y.md  build-hook-wasm.ps1  build-hook-wasm.sh  build-rn-native.sh  build-wasm.mjs  build-wasm.sh  build.ps1  ci.ps1  copy-web-to-host.mjs  deploy-android-vm.ps1  deploy-android-vm.sh  dev-server.cjs  dev.ps1  embed-theme.cjs  embed-theme.js  ios-prepare-hook-transpiler.sh  ios-prepare-themed-styler.sh  kubectl-exec-update-template.sh  rn-build-release.sh  rn-prepare-hook-transpiler.sh  rn-prepare-themed-styler.sh  run-all-tests.js  run-relay-local-with-data.sh  storybook-a11y.js  update-relay-template.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: generate-icons.mjs  run-tauri-dev.mjs  tauri.cli.json
src-tauri/src/: main.rs
stories/: Template.Mobile.stories.js  Template.stories.js  dropzone.stories.js  modal.stories.js  movie-card.stories.js  movies-search.stories.js  movies-viewer.stories.js  movies.stories.js
template-ui/: index.html
terraform/: secrets.auto.tfvars.example
(+366 files in other folders)
