[workspace]
members = [
    "crates/relay-core",
    "crates/relay-cli",
    "crates/relay-wasm"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Relay Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
