[package]
name = "relay-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tauri = { workspace = true, features = ["http-client"] }

[features]
# default features for desktop build
default = []

[package.metadata.tauri]
# Point to tauri.conf.json in this directory
config = { path = "tauri.conf.json" }
