[package]
name = "relay-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.9.3", features = [] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
app_lib = { package = "app", path = "./src-tauri" }


[features]
# default features for desktop build
default = []

[package.metadata.tauri]
# Point to tauri.conf.json in this directory
config = { path = "tauri.conf.json" }
