[package]
name = "relay-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.9.3", features = [] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Use relay-repo crate directly for repo initialization (fs helpers)
relay-repo = { path = "../crates/relay-repo", features = ["fs"] }
# The app helper crate was removed to avoid generated scaffolding. Inline the
# runtime logic in `src/main.rs` so `cargo metadata` won't look for
# `src-tauri/src-tauri/Cargo.toml` anymore.


[features]
# default features for desktop build
default = []

[package.metadata.tauri]
# Point to tauri.conf.json in this directory
config = { path = "tauri.conf.json" }
