[package]
name = "relay-client-valdi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
relay-client-core = { path = "../../crates/relay-client-core" }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
