[package]
name = "relay-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
eframe = { version = "0.27", default-features = false, features = ["glow"] }
egui = "0.27"
rfd = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
directories = "5"
open = "5"
url = "2"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
cfg-if = "1"
tao = { version = "0.29", optional = true }
wry = { version = "0.44", optional = true }
once_cell = "1.19"
webview2 = { version = "0.1", optional = true }
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi",
    "wingdi",
    "combaseapi",
    "objbase",
    "windef",
], optional = true }
widestring = "0.5"

# Windows WebView2 will be pulled transitively by wry on Windows

[features]
# Do not enable the embedded webview by default to avoid pulling
# Windows-only dependencies on non-Windows platforms during workspace builds.
default = ["internal_player"]
internal_player = []
webview = ["dep:wry", "dep:tao", "dep:webview2", "dep:winapi"]
