[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = "0.18"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
mime_guess = "2"
percent-encoding = "2"
base64 = "0.22"
jsonschema = "0.17"
tower-http = { version = "0.5", features = ["trace"] }
pulldown-cmark = "0.9"
relay-lib = { path = "../../crates/relay-lib" }

[dev-dependencies]
tempfile = "3"
