[package]
name = "relay-server"
# Update with each release
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = { version = "0.18", features = ["vendored-openssl"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
mime_guess = "2"
percent-encoding = "2"
base64 = "0.22"
jsonschema = "0.17"
tower-http = { version = "0.5", features = ["trace", "cors"] }
pulldown-cmark = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
rustls = { version = "0.23", features = ["ring"] }
hook-transpiler = { path = "../../crates/hook-transpiler" }

[dev-dependencies]
tempfile = "3"

[features]
# Enables IPFS end-to-end tests that spawn a local Kubo daemon.
# These tests are Linux-only and intended to run inside Docker or CI.
ipfs_tests = []
