[package]
name = "hook-transpiler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Minimal JSX/TSX transpiler for Relay hooks with dynamic import() rewrite to context.helpers.loadModule and friendly errors"

[lib]
name = "hook_transpiler"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"

# SWC ecosystem (aligned 18.x series present on crates.io)
swc_common = "18.0.1"
swc_ecma_ast = "18.0.0"
swc_ecma_parser = "18.0.2"
swc_ecma_visit = "18.0.0"
swc_ecma_codegen = "18.0.0"
swc_ecma_transforms_base = "18.0.0"
swc_ecma_transforms_react = "18.0.0"
swc_ecma_transforms_typescript = "18.0.0"

# Native-only HTTP client (for potential future use)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "1"
