[package]
name = "hook-transpiler"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Minimal JSX/TSX transpiler for Relay hooks with dynamic import() rewrite to context.helpers.loadModule and friendly errors"

[lib]
name = "relay_hook_transpiler"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
android = ["jni"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
once_cell = "1.21.3"
regex = "1.11.1"
swc_core = { version = "50.2.0", features = [
	"__common",
	"__ecma",
	"__parser",
	"__visit",
	"__ecma_transforms",
	"ecma_ast",
	"ecma_codegen",
	"ecma_transforms_module",
	"ecma_transforms_react",
	"ecma_transforms_typescript",
	"swc_atoms",
] }
swc_ecma_transforms_module = "35.0.0"

# Native-only HTTP client (for potential future use)
reqwest = { version = "0.12.25", features = ["json", "rustls-tls", "gzip"], optional = true }
jni = { version = "0.21", optional = true, default-features = false }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2.106", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
