[package]
name = "relay-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
relay-core = { path = "../relay-core" }
serde = { workspace = true }
serde_json = { workspace = true }
ctrlc = { workspace = true }
toml = { workspace = true }
