[package]
name = "relay-repo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# FS helpers and symlink creation; keep core parsing/templating usable without it
fs = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
regex = "1.10"
walkdir = "2.5"
