[package]
name = "themed-styler"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Client-side runtime styling engine for web and React Native with theme support and Tailwind subset"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
regex = "1"
thiserror = "1"
anyhow = "1"
wasm-bindgen = "0.2"
jni = "0.21"

[dev-dependencies]
serde_json = "1"
pretty_assertions = "1"

[features]
android = []
