[package]
name = "relay-client-rn-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "relay_client_rn_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
jni = { version = "0.21", optional = true }

[features]
default = []
android = ["jni"]

[profile.release]
strip = true
opt-level = 3
lto = true
