[package]
name = "wasm_hook_transpiler"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1"
swc_core = { version = "50.1.3", features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_visit",
  "ecma_transforms",
  "ecma_transforms_typescript",
  "ecma_transforms_react",
] }
wasm-bindgen = { version = "0.2" }
# Ensure getrandom uses the wasm_js backend for wasm32-unknown-unknown
getrandom = { version = "0.3", features = ["wasm_js"] }
